--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-Django==5.0
-dj-database-url==2.1.0
-whitenoise[brotli]==6.6.0
-gunicorn==21.2.0
-uvicorn==0.27.0
-psycopg2-binary==2.9.9
-pillow==10.2.0  # For image handling
-python-dotenv==1.0.0  # For environment variables
+Django>=4.2,<5.0
+dj-database-url>=1.2.0
+whitenoise>=6.0.0
+gunicorn>=20.1.0
+uvicorn>=0.22.0
+psycopg2-binary>=2.9.6
+python-dotenv>=0.19.0
